# hello-kni

./: README.md  README_ZH.md  build.gradle  settings.gradle.kts
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  hello-jni.c
app/src/main/java/com/example/hellojni/: HelloJni.java
app/src/main/res/layout/: activity_hello_jni.xml
gradle/wrapper/: gradle-wrapper.properties
nativeLib/: build.gradle.kts
nativeLib/src/main/: AndroidManifest.xml
nativeLib/src/nativeMain/kotlin/: main.kt
prebuiltLibrary/: build.sh
prebuiltLibrary/src/main/kotlin/: main.kt
